<?xml version="1.0"?>
<package>
  <name>hansagv_description</name>
  <version>0.0.0</version>
  <description>The visual model of X-1 plus</description>

  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>

  <license>TODO</license>

  <author email="liucong.cdhaw@gmail.com">Cong Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
